changed vehile type list